fixed spacing for filters in IE. fixes #975

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -203,6 +203,7 @@ ul#view-header li {
 
 #left-column ul li {
     margin:0px;
+    padding-right: 18px;
 }
 
 #left-column ul li.all {
